fixed alignment of studentgrid

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -85,6 +85,7 @@ a {
   flex-direction: row;
   margin:auto;
   align-content:center;
+  margin: 0em 5em 0em 5em;
 }
 
 .container-item-students {
